Small performance improvement of Integer
new Integer(x) always creates a new object. Integer.valueOf(x) can check a cache to see if that boxed integer has already been created.